--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,38 +3,44 @@ version: '3.8'
 services:
   rabbitmq_crawler:
     image: rabbitmq:3-management
+    restart: unless-stopped
     ports:
       - "15672:15672"
       - "5672:5672"
     environment:
-      RABBITMQ_DEFAULT_USER: { RABBITMQ_USER }
-      RABBITMQ_DEFAULT_PASS: { POSTGRES_PASSWORD }
+      RABBITMQ_DEFAULT_USER: "${RABBITMQ_USER}"
+      RABBITMQ_DEFAULT_PASS: "${RABBITMQ_PASSWORD}"
 
   rabbitmq_parser:
     image: rabbitmq:3-management
+    restart: unless-stopped
     ports:
       - "15673:15672"
       - "5673:5672"
     environment:
-      RABBITMQ_DEFAULT_USER: { RABBITMQ_USER }
-      RABBITMQ_DEFAULT_PASS: { POSTGRES_PASSWORD }
+      RABBITMQ_DEFAULT_USER: "${RABBITMQ_USER}"
+      RABBITMQ_DEFAULT_PASS: "${RABBITMQ_PASSWORD}"
 
   redis_visited:
     image: redis:alpine
+    restart: unless-stopped
     ports:
       - "6379:6379"
 
   redis_enqueued:
     image: redis:alpine
+    restart: unless-stopped
     ports:
       - "6380:6379"
 
   postgres:
-    image: postgres:15
+    image: postgres:16
+    container_name: db_distributed_crawler
+    restart: unless-stopped
     environment:
-      POSTGRES_DB: { POSTGRES_DB }
-      POSTGRES_USER: { POSTGRES_USER }
-      POSTGRES_PASSWORD: { POSTGRES_PASSWORD }
+      POSTGRES_DB: "${POSTGRES_DB}"
+      POSTGRES_USER: "${POSTGRES_USER}"
+      POSTGRES_PASSWORD: "${POSTGRES_PASSWORD}"
     volumes:
       - pg_data:/var/lib/postgresql/data
     ports:
@@ -42,6 +48,7 @@ services:
 
   prometheus:
     image: prom/prometheus
+    restart: unless-stopped
     volumes:
       - ./prometheus.yml:/etc/prometheus/prometheus.yml
     ports:
@@ -49,6 +56,7 @@ services:
 
   grafana:
     image: grafana/grafana
+    restart: unless-stopped
     ports:
       - "3000:3000"
     volumes:
