Modified workflow linter job, and added dummy file for testing

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Run Ruff linter
         run: |
           pip install ruff
-          ruff .
+          ruff check .
 
       - name: Check docker-compose syntax
         run: docker compose config
