--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -18,4 +18,15 @@ jobs:
 
       - name: Check docker-compose syntax
         run: docker compose config
+  
+  test:
+    runs-on: ubuntu-latest
+    needs: lint
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Build services
+        run: |
+          docker compose build
         
