--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,40 @@
-venv
+# Node.js
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# macOS
+.DS_Store
+
+# Linux
+*~
+
+# Windows
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+
+# Python
+venv/
+__pycache__/
+*.py[cod]
+*.egg-info/
+*.egg
 .env
-tmp
+
+# Logs
+logs/
+*.log
+
+# IDEs
+.vscode/
+.idea/
+
+# Build output
+dist/
+build/
+out/
+
+# personal project notes
+project_notes/
