--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,39 +1,25 @@
 services:
-  # rabbitmq_crawler:
-  #   image: rabbitmq:3-management
-  #   restart: unless-stopped
-  #   ports:
-  #     - "15672:15672"
-  #     - "5672:5672"
-  #   environment:
-  #     RABBITMQ_DEFAULT_USER: "${RABBITMQ_USER}"
-  #     RABBITMQ_DEFAULT_PASS: "${RABBITMQ_PASSWORD}"
+  rabbitmq:
+    image: rabbitmq:3-management
+    container_name: rabbitmq
+    restart: unless-stopped
+    ports:
+      - "15672:15672"
+      - "5672:5672"
+    environment:
+      RABBITMQ_DEFAULT_USER: "${RABBITMQ_USER}"
+      RABBITMQ_DEFAULT_PASS: "${RABBITMQ_PASSWORD}"
 
-  # rabbitmq_parser:
-  #   image: rabbitmq:3-management
-  #   restart: unless-stopped
-  #   ports:
-  #     - "15673:15672"
-  #     - "5673:5672"
-  #   environment:
-  #     RABBITMQ_DEFAULT_USER: "${RABBITMQ_USER}"
-  #     RABBITMQ_DEFAULT_PASS: "${RABBITMQ_PASSWORD}"
-
-  # redis_visited:
-  #   image: redis:alpine
-  #   restart: unless-stopped
-  #   ports:
-  #     - "6379:6379"
-
-  # redis_enqueued:
-  #   image: redis:alpine
-  #   restart: unless-stopped
-  #   ports:
-  #     - "6380:6379"
+  redis:
+    image: redis:alpine
+    container_name: redis
+    restart: unless-stopped
+    ports:
+      - "6379:6379"
 
   postgres:
     image: postgres:16
-    container_name: crawler_db
+    container_name: postgres
     restart: unless-stopped
     environment:
       POSTGRES_DB: "${POSTGRES_DB}"
