--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ services:
     image: rabbitmq:3-management
     container_name: rabbitmq
     restart: unless-stopped
+    env_file: .env
     ports:
       - "15672:15672"
       - "5672:5672"
@@ -17,27 +18,38 @@ services:
     ports:
       - "6379:6379"
 
-  postgres:
-    image: postgres:16
-    container_name: postgres
-    restart: unless-stopped
-    environment:
-      POSTGRES_DB: "${POSTGRES_DB}"
-      POSTGRES_USER: "${POSTGRES_USER}"
-      POSTGRES_PASSWORD: "${POSTGRES_PASSWORD}"
-    volumes:
-      - pg_data:/var/lib/postgresql/data
-    ports:
-      - "5432:5432"
+  # postgres:
+  #   image: postgres:16
+  #   container_name: postgres
+  #   restart: unless-stopped
+  #   environment:
+  #     POSTGRES_DB: "${POSTGRES_DB}"
+  #     POSTGRES_USER: "${POSTGRES_USER}"
+  #     POSTGRES_PASSWORD: "${POSTGRES_PASSWORD}"
+  #   volumes:
+  #     - pg_data:/var/lib/postgresql/data
+  #   ports:
+  #     - "5432:5432"
 
-  db_init:
-    container_name: db_init
+  # db_init:
+  #   container_name: db_init
+  #   build:
+  #     context: ./db_init
+  #   depends_on:
+  #     - postgres
+  #   env_file: .env # Only used in local dev
+  #   command: [ "python", "db_init.py" ]
+
+  crawler:
+    container_name: crawler
     build:
-      context: ./db_init
+      context: .
+      dockerfile: crawler/Dockerfile
     depends_on:
-      - postgres
+      - rabbitmq
+      - redis
     env_file: .env # Only used in local dev
-    command: [ "python", "db_init.py" ]
+    command: [ "python", "-m", "crawler.crawler" ]
   # prometheus:
   #   image: prom/prometheus
   #   restart: unless-stopped
