Implemented crawler and refactored the db_init module

--- a/Crawler/Dockerfile
+++ b/Crawler/Dockerfile
@@ -5,6 +5,9 @@ WORKDIR /app
 # shared code
 COPY requirements-common.txt  ./requirements-common.txt
 COPY utilities/   ./utilities/
+COPY db_models/   ./db_models/
+COPY db/          ./db/
+
 COPY config.py    ./config.py
 
 # service-specific code
