--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,34 +18,37 @@ services:
     ports:
       - "6379:6379"
 
-  # postgres:
-  #   image: postgres:16
-  #   container_name: postgres
-  #   restart: unless-stopped
-  #   environment:
-  #     POSTGRES_DB: "${POSTGRES_DB}"
-  #     POSTGRES_USER: "${POSTGRES_USER}"
-  #     POSTGRES_PASSWORD: "${POSTGRES_PASSWORD}"
-  #   volumes:
-  #     - pg_data:/var/lib/postgresql/data
-  #   ports:
-  #     - "5432:5432"
+  postgres:
+    image: postgres:16
+    container_name: postgres
+    restart: unless-stopped
+    environment:
+      POSTGRES_DB: "${POSTGRES_DB}"
+      POSTGRES_USER: "${POSTGRES_USER}"
+      POSTGRES_PASSWORD: "${POSTGRES_PASSWORD}"
+    volumes:
+      - pg_data:/var/lib/postgresql/data
+    ports:
+      - "5432:5432"
 
-  # db_init:
-  #   container_name: db_init
-  #   build:
-  #     context: ./db_init
-  #   depends_on:
-  #     - postgres
-  #   env_file: .env # Only used in local dev
-  #   command: [ "python", "db_init.py" ]
+  db_init:
+    container_name: db_init
+    build:
+      context: .
+      dockerfile: db_init/Dockerfile
+    depends_on:
+      - postgres
+    env_file: .env # Only used in local dev
+    command: [ "python", "-m", "db_init.db_init" ]
 
   crawler:
-    container_name: crawler
+    # container_name: crawler
     build:
       context: .
       dockerfile: crawler/Dockerfile
     depends_on:
+      - postgres
+      - db_init
       - rabbitmq
       - redis
     env_file: .env # Only used in local dev
