--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,6 +53,8 @@ services:
       - redis
     env_file: .env # Only used in local dev
     command: [ "python", "-m", "crawler.crawler" ]
+    volumes:
+      - compressed_html_data:/data/html
   # prometheus:
   #   image: prom/prometheus
   #   restart: unless-stopped
@@ -70,4 +72,5 @@ services:
   #     - grafana_data:/var/lib/grafana
 
 volumes:
-  pg_data: # grafana_data:
+  pg_data:
+  compressed_html_data:
