--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,19 @@
+x-crawler-common: &crawler-common
+  build:
+    context: .
+    dockerfile: crawler/Dockerfile
+  depends_on:
+    - postgres
+    - db_init
+    - rabbitmq
+    - redis
+  env_file: .env # common env
+  command: [ "python", "-m", "crawler.crawler" ]
+  volumes:
+    - compressed_html_data:${DL_HTML_PATH}
+  environment:
+    - NO_PROXY=localhost,127.0.0.1,rabbitmq,redis,postgres,192.168.0.0/16
+
 services:
   rabbitmq:
     image: rabbitmq:3-management
@@ -41,23 +57,71 @@ services:
     env_file: .env # Only used in local dev
     command: [ "python", "-m", "db_init.db_init" ]
 
-  crawler_ashburn:
-    build:
-      context: .
-      dockerfile: crawler/Dockerfile
-    depends_on:
-      - postgres
-      - db_init
-      - rabbitmq
-      - redis
-    env_file: .env # Only used in local dev
+  # California Proxies
+  crawler_la:
+    <<: *crawler-common
     environment:
-      - HTTP_PROXY=${ASHBURN_PROXY}
-      - HTTPS_PROXY=${ASHBURN_PROXY}
-      - NO_PROXY=localhost,127.0.0.1,rabbitmq,redis,postgres,192.168.0.0/16
-    command: [ "python", "-m", "crawler.crawler" ]
-    volumes:
-      - compressed_html_data:${DL_HTML_PATH}
+      - HTTP_PROXY=${CA_LA1_PROXY}
+      - HTTPS_PROXY=${CA_LA1_PROXY}
+
+  crawler_santa_cruz:
+    <<: *crawler-common
+    environment:
+      - HTTP_PROXY=${CA_SANTA_CRUZ1_PROXY}
+      - HTTPS_PROXY=${CA_SANTA_CRUZ1_PROXY}
+
+  # Florida Proxies
+  crawler_boca_raton:
+    <<: *crawler-common
+    environment:
+      - HTTP_PROXY=${FL_BOCA_RATON_PROXY}
+      - HTTPS_PROXY=${FL_BOCA_RATON_PROXY}
+
+  # Nevada
+  crawler_las_vegas:
+    <<: *crawler-common
+    environment:
+      - HTTP_PROXY=${NV_LAS_VEGAS1_PROXY}
+      - HTTPS_PROXY=${NV_LAS_VEGAS1_PROXY}
+
+  # New York Proxies
+  crawler_buffalo:
+    <<: *crawler-common
+    environment:
+      - HTTP_PROXY=${NY_BUFFALO1_PROXY}
+      - HTTPS_PROXY=${NY_BUFFALO1_PROXY}
+
+  crawler_nyc:
+    <<: *crawler-common
+    environment:
+      - HTTP_PROXY=${NY_NEW_YORK1_PROXY}
+      - HTTPS_PROXY=${NY_NEW_YORK1_PROXY}
+
+  # Texas Proxies
+  crawler_dallas:
+    <<: *crawler-common
+    environment:
+      - HTTP_PROXY=${TX_DALLAS1_PROXY}
+      - HTTPS_PROXY=${TX_DALLAS1_PROXY}
+
+  crawler_victoria:
+    <<: *crawler-common
+    environment:
+      - HTTP_PROXY=${TX_VICTORIA1_PROXY}
+      - HTTPS_PROXY=${TX_VICTORIA1_PROXY}
+
+  # Virginia Proxies
+  crawler_ashburn:
+    <<: *crawler-common
+    environment:
+      - HTTP_PROXY=${VA_ASHBURN1_PROXY}
+      - HTTPS_PROXY=${VA_ASHBURN1_PROXY}
+
+  crawler_reston:
+    <<: *crawler-common
+    environment:
+      - HTTP_PROXY=${VA_RESTON1_PROXY}
+      - HTTPS_PROXY=${VA_RESTON1_PROXY}
   # ===========================================
   # Testing services for proxies/vpn services
   # ===========================================
@@ -66,8 +130,8 @@ services:
   #   image: curlimages/curl
   #   container_name: testapp
   # environment:
-  #   - HTTP_PROXY=${DALLAS2_PROXY}
-  #   - HTTPS_PROXY=${DALLAS2_PROXY}
+  #   - HTTP_PROXY=${TX_DALLAS2_PROXY}
+  #   - HTTPS_PROXY=${TX_DALLAS2_PROXY}
   #   - NO_PROXY=localhost,127.0.0.1,rabbitmq,redis,postgres,192.168.0.0/16
   # command: [ "curl", "-sS", "https://am.i.mullvad.net/json" ]
   # command: [ "curl", "-sS", "http://192.168.86.15:15672/" ]
