--- a/Crawler/Dockerfile
+++ b/Crawler/Dockerfile
@@ -5,8 +5,7 @@ WORKDIR /app
 # shared code
 COPY requirements-common.txt  ./requirements-common.txt
 COPY utilities/   ./utilities/
-COPY db_models/   ./db_models/
-COPY db/          ./db/
+COPY database/   ./database/
 
 COPY config.py    ./config.py
 
