--- a/Crawler/Dockerfile
+++ b/Crawler/Dockerfile
@@ -4,8 +4,9 @@ WORKDIR /app
 
 # shared code
 COPY requirements-common.txt  ./requirements-common.txt
-COPY utilities/   ./utilities/
-COPY database/   ./database/
+COPY utilities/     ./utilities/
+COPY database/      ./database/
+COPY shared/        ./shared/
 
 COPY config.py    ./config.py
 
