--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,74 +55,75 @@ services:
     depends_on:
       - postgres
     env_file: .env # Only used in local dev
-    # command: [ "python", "-m", "db_init.db_init" ]
     command: [ "python", "-m", "database.db_init.db_init" ]
 
+  crawler_noproxy:
+    <<: *crawler-common
   # California Proxies
-  crawler_la:
-    <<: *crawler-common
-    environment:
-      - HTTP_PROXY=${CA_LA1_PROXY}
-      - HTTPS_PROXY=${CA_LA1_PROXY}
+  # crawler_la:
+  #   <<: *crawler-common
+  #   environment:
+  #     - HTTP_PROXY=${CA_LA1_PROXY}
+  #     - HTTPS_PROXY=${CA_LA1_PROXY}
 
-  crawler_santa_cruz:
-    <<: *crawler-common
-    environment:
-      - HTTP_PROXY=${CA_SANTA_CRUZ1_PROXY}
-      - HTTPS_PROXY=${CA_SANTA_CRUZ1_PROXY}
+  # crawler_santa_cruz:
+  #   <<: *crawler-common
+  #   environment:
+  #     - HTTP_PROXY=${CA_SANTA_CRUZ1_PROXY}
+  #     - HTTPS_PROXY=${CA_SANTA_CRUZ1_PROXY}
 
-  # Florida Proxies
-  crawler_boca_raton:
-    <<: *crawler-common
-    environment:
-      - HTTP_PROXY=${FL_BOCA_RATON_PROXY}
-      - HTTPS_PROXY=${FL_BOCA_RATON_PROXY}
+  # # Florida Proxies
+  # crawler_boca_raton:
+  #   <<: *crawler-common
+  #   environment:
+  #     - HTTP_PROXY=${FL_BOCA_RATON_PROXY}
+  #     - HTTPS_PROXY=${FL_BOCA_RATON_PROXY}
 
-  # Nevada
-  crawler_las_vegas:
-    <<: *crawler-common
-    environment:
-      - HTTP_PROXY=${NV_LAS_VEGAS1_PROXY}
-      - HTTPS_PROXY=${NV_LAS_VEGAS1_PROXY}
+  # # Nevada
+  # crawler_las_vegas:
+  #   <<: *crawler-common
+  #   environment:
+  #     - HTTP_PROXY=${NV_LAS_VEGAS1_PROXY}
+  #     - HTTPS_PROXY=${NV_LAS_VEGAS1_PROXY}
 
-  # New York Proxies
-  crawler_buffalo:
-    <<: *crawler-common
-    environment:
-      - HTTP_PROXY=${NY_BUFFALO1_PROXY}
-      - HTTPS_PROXY=${NY_BUFFALO1_PROXY}
+  # # New York Proxies
+  # crawler_buffalo:
+  #   <<: *crawler-common
+  #   environment:
+  #     - HTTP_PROXY=${NY_BUFFALO1_PROXY}
+  #     - HTTPS_PROXY=${NY_BUFFALO1_PROXY}
 
-  crawler_nyc:
-    <<: *crawler-common
-    environment:
-      - HTTP_PROXY=${NY_NEW_YORK1_PROXY}
-      - HTTPS_PROXY=${NY_NEW_YORK1_PROXY}
+  # crawler_nyc:
+  #   <<: *crawler-common
+  #   environment:
+  #     - HTTP_PROXY=${NY_NEW_YORK1_PROXY}
+  #     - HTTPS_PROXY=${NY_NEW_YORK1_PROXY}
 
-  # Texas Proxies
-  crawler_dallas:
-    <<: *crawler-common
-    environment:
-      - HTTP_PROXY=${TX_DALLAS1_PROXY}
-      - HTTPS_PROXY=${TX_DALLAS1_PROXY}
+  # # Texas Proxies
+  # crawler_dallas:
+  #   <<: *crawler-common
+  #   environment:
+  #     - HTTP_PROXY=${TX_DALLAS1_PROXY}
+  #     - HTTPS_PROXY=${TX_DALLAS1_PROXY}
 
-  crawler_victoria:
-    <<: *crawler-common
-    environment:
-      - HTTP_PROXY=${TX_VICTORIA1_PROXY}
-      - HTTPS_PROXY=${TX_VICTORIA1_PROXY}
+  # crawler_victoria:
+  #   <<: *crawler-common
+  #   environment:
+  #     - HTTP_PROXY=${TX_VICTORIA1_PROXY}
+  #     - HTTPS_PROXY=${TX_VICTORIA1_PROXY}
 
-  # Virginia Proxies
-  crawler_ashburn:
-    <<: *crawler-common
-    environment:
-      - HTTP_PROXY=${VA_ASHBURN1_PROXY}
-      - HTTPS_PROXY=${VA_ASHBURN1_PROXY}
+  # # Virginia Proxies
+  # crawler_ashburn:
+  #   <<: *crawler-common
+  #   environment:
+  #     - HTTP_PROXY=${VA_ASHBURN1_PROXY}
+  #     - HTTPS_PROXY=${VA_ASHBURN1_PROXY}
 
-  crawler_reston:
-    <<: *crawler-common
-    environment:
-      - HTTP_PROXY=${VA_RESTON1_PROXY}
-      - HTTPS_PROXY=${VA_RESTON1_PROXY}
+  # crawler_reston:
+  #   <<: *crawler-common
+  #   environment:
+  #     - HTTP_PROXY=${VA_RESTON1_PROXY}
+  #     - HTTPS_PROXY=${VA_RESTON1_PROXY}
   # ===========================================
   # Testing services for proxies/vpn services
   # ===========================================
