--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ x-crawler-common: &crawler-common
     - db_init
     - rabbitmq
     - redis
-  env_file: .env # common env
+  env_file: .env
   command: [ "python", "-m", "crawler.crawler_worker" ]
   volumes:
     - compressed_html_data:${DL_HTML_PATH}
@@ -142,10 +142,20 @@ services:
       - postgres
       - db_init
       - rabbitmq
-    env_file: .env # common env
+    env_file: .env
     command: [ "python", "-m", "parser.parser" ]
     volumes:
       - compressed_html_data:${DL_HTML_PATH}
+
+  db_service:
+    build:
+      context: .
+      dockerfile: database_service/Dockerfile
+    env_file: .env
+    depends_on:
+      - rabbitmq
+      - postgres
+    command: [ "python", "-m", "database_service.db_service" ]
   # ===========================================
   # Testing services for proxies/vpn services
   # ===========================================
