--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,28 +16,28 @@ x-crawler-common: &crawler-common
     - NO_PROXY=localhost,127.0.0.1,rabbitmq,redis,postgres,192.168.0.0/16
 
 services:
-  rabbitmq:
-    image: rabbitmq:3-management
-    container_name: rabbitmq
-    restart: unless-stopped
-    env_file: .env
-    ports:
-      - "15672:15672"
-      - "5672:5672"
-    environment:
-      RABBITMQ_DEFAULT_USER: "${RABBITMQ_USER}"
-      RABBITMQ_DEFAULT_PASS: "${RABBITMQ_PASSWORD}"
-    volumes:
-      - rabbitmq_data:/var/lib/rabbitmq
+  # rabbitmq:
+  #   image: rabbitmq:3-management
+  #   container_name: rabbitmq
+  #   restart: unless-stopped
+  #   env_file: .env
+  #   ports:
+  #     - "15672:15672"
+  #     - "5672:5672"
+  #   environment:
+  #     RABBITMQ_DEFAULT_USER: "${RABBITMQ_USER}"
+  #     RABBITMQ_DEFAULT_PASS: "${RABBITMQ_PASSWORD}"
+  #   volumes:
+  #     - rabbitmq_data:/var/lib/rabbitmq
 
-  seeder:
-    container_name: queue_seeder
-    build:
-      context: .
-      dockerfile: seeder/Dockerfile
-    env_file: .env
-    depends_on:
-      - rabbitmq
+  # seeder:
+  #   container_name: queue_seeder
+  #   build:
+  #     context: .
+  #     dockerfile: seeder/Dockerfile
+  #   env_file: .env
+  #   depends_on:
+  #     - rabbitmq
 
   postgres:
     image: postgres:16
@@ -52,24 +52,23 @@ services:
     ports:
       - "5432:5432"
 
-  db_init:
-    container_name: db_init
+  postgres_initiator:
+    container_name: postgres_initiator
     build:
       context: .
-      dockerfile: database/db_init/Dockerfile
+      dockerfile: components/postgres_initiator/Dockerfile
     depends_on:
       - postgres
     env_file: .env # Only used in local dev
-    command: [ "python", "-m", "database.db_init.db_init" ]
-
-  redis:
-    image: redis:alpine
-    container_name: redis
-    restart: unless-stopped
-    ports:
-      - "6379:6379"
-  crawler_noproxy:
-    <<: *crawler-common
+    command: [ "python", "-m", "components.postgres_initiator.main" ]
+  # redis:
+  #   image: redis:alpine
+  #   container_name: redis
+  #   restart: unless-stopped
+  #   ports:
+  #     - "6379:6379"
+  # crawler_noproxy:
+  #   <<: *crawler-common
   # California Proxies
   # crawler_la:
   #   <<: *crawler-common
@@ -135,28 +134,28 @@ services:
   #   environment:
   #     - HTTP_PROXY=${VA_RESTON1_PROXY}
   #     - HTTPS_PROXY=${VA_RESTON1_PROXY}
-  parser:
-    build:
-      context: .
-      dockerfile: parser/Dockerfile
-    depends_on:
-      - postgres
-      - db_init
-      - rabbitmq
-    env_file: .env
-    command: [ "python", "-m", "parser.parser" ]
-    volumes:
-      - compressed_html_data:${DL_HTML_PATH}
+  # parser:
+  #   build:
+  #     context: .
+  #     dockerfile: parser/Dockerfile
+  #   depends_on:
+  #     - postgres
+  #     - db_init
+  #     - rabbitmq
+  #   env_file: .env
+  #   command: [ "python", "-m", "parser.parser" ]
+  #   volumes:
+  #     - compressed_html_data:${DL_HTML_PATH}
 
-  db_service:
-    build:
-      context: .
-      dockerfile: database_service/Dockerfile
-    env_file: .env
-    depends_on:
-      - rabbitmq
-      - postgres
-    command: [ "python", "-m", "database_service.db_service" ]
+  # db_service:
+  #   build:
+  #     context: .
+  #     dockerfile: database_service/Dockerfile
+  #   env_file: .env
+  #   depends_on:
+  #     - rabbitmq
+  #     - postgres
+  #   command: [ "python", "-m", "database_service.db_service" ]
   # ===========================================
   # Testing services for proxies/vpn services
   # ===========================================
