--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -139,18 +139,18 @@ services:
   #     - HTTPS_PROXY=${VA_RESTON1_PROXY}
 
 
-  parser:
-    build:
-      context: .
-      dockerfile: components/parser/Dockerfile
-    depends_on:
-      - postgres
-      - postgres_initiator
-      - rabbitmq
-    env_file: .env
-    command: [ "python", "-m", "components.parser.main" ]
-    volumes:
-      - compressed_html_data:${DL_HTML_PATH}
+  # parser:
+  #   build:
+  #     context: .
+  #     dockerfile: components/parser/Dockerfile
+  #   depends_on:
+  #     - postgres
+  #     - postgres_initiator
+  #     - rabbitmq
+  #   env_file: .env
+  #   command: [ "python", "-m", "components.parser.main" ]
+  #   volumes:
+  #     - compressed_html_data:${DL_HTML_PATH}
   # db_service:
   #   build:
   #     context: .
