--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -151,15 +151,16 @@ services:
     command: [ "python", "-m", "components.parser.main" ]
     volumes:
       - compressed_html_data:${DL_HTML_PATH}
-  # db_service:
-  #   build:
-  #     context: .
-  #     dockerfile: database_service/Dockerfile
-  #   env_file: .env
-  #   depends_on:
-  #     - rabbitmq
-  #     - postgres
-  #   command: [ "python", "-m", "database_service.db_service" ]
+  db_service:
+    container_name: db_service
+    build:
+      context: .
+      dockerfile: components/db_service/Dockerfile
+    env_file: .env
+    depends_on:
+      - rabbitmq
+      - postgres
+    command: [ "python", "-m", "components.db_service.main" ]
   # ===========================================
   # Testing services for proxies/vpn services
   # ===========================================
