--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -166,17 +166,16 @@ services:
   #   command: [ "python", "-m", "components.parser.main" ]
   #   volumes:
   #     - compressed_html_data:${DL_HTML_PATH}
-  # db_service:
-  #   container_name: db_service
-  #   build:
-  #     context: .
-  #     dockerfile: components/db_service/Dockerfile
-  #   env_file: .env
-  #   depends_on:
-  #     - rabbitmq
-  #     - postgres
-  #   command: [ "python", "-m", "components.db_service.main" ]
-
+  db_service:
+    container_name: db_service
+    build:
+      context: .
+      dockerfile: components/db_service/Dockerfile
+    env_file: .env
+    depends_on:
+      - rabbitmq
+      - postgres
+    command: [ "python", "-m", "components.db_service.main" ]
   # scheduler:
   #   container_name: scheduler
   #   build:
