--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -78,6 +78,7 @@ services:
     image: redis:alpine
     container_name: redis
     restart: unless-stopped
+    command: redis-server --maxmemory 2147483648 --maxmemory-policy allkeys-lru #2GiB of ram
     ports:
       - "6379:6379"
 
