--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -89,24 +89,24 @@ services:
     <<: *crawler-common
 
   # California Proxies
-  crawler_la:
-    <<: *crawler-common
-    environment:
-      - HTTP_PROXY=${CA_LA1_PROXY}
-      - HTTPS_PROXY=${CA_LA1_PROXY}
+  # crawler_la:
+  #   <<: *crawler-common
+  #   environment:
+  #     - HTTP_PROXY=${CA_LA1_PROXY}
+  #     - HTTPS_PROXY=${CA_LA1_PROXY}
 
-  crawler_san_jose:
-    <<: *crawler-common
-    environment:
-      - HTTP_PROXY=${CA_SAN_JOSE_PROXY}
-      - HTTPS_PROXY=${CA_SAN_JOSE_PROXY}
+  # crawler_san_jose:
+  #   <<: *crawler-common
+  #   environment:
+  #     - HTTP_PROXY=${CA_SAN_JOSE_PROXY}
+  #     - HTTPS_PROXY=${CA_SAN_JOSE_PROXY}
 
   # Florida Proxies
-  crawler_boca_raton:
-    <<: *crawler-common
-    environment:
-      - HTTP_PROXY=${FL_BOCA_RATON_PROXY}
-      - HTTPS_PROXY=${FL_BOCA_RATON_PROXY}
+  # crawler_boca_raton:
+  #   <<: *crawler-common
+  #   environment:
+  #     - HTTP_PROXY=${FL_BOCA_RATON_PROXY}
+  #     - HTTPS_PROXY=${FL_BOCA_RATON_PROXY}
 
   # Nevada
   # crawler_las_vegas:
@@ -129,11 +129,11 @@ services:
   #     - HTTPS_PROXY=${NY_NEW_YORK1_PROXY}
 
   # Texas Proxies
-  crawler_dallas:
-    <<: *crawler-common
-    environment:
-      - HTTP_PROXY=${TX_DALLAS1_PROXY}
-      - HTTPS_PROXY=${TX_DALLAS1_PROXY}
+  # crawler_dallas:
+  #   <<: *crawler-common
+  #   environment:
+  #     - HTTP_PROXY=${TX_DALLAS1_PROXY}
+  #     - HTTPS_PROXY=${TX_DALLAS1_PROXY}
 
   # crawler_victoria:
   #   <<: *crawler-common
@@ -142,11 +142,11 @@ services:
   #     - HTTPS_PROXY=${TX_VICTORIA1_PROXY}
 
   # Virginia Proxies
-  crawler_ashburn:
-    <<: *crawler-common
-    environment:
-      - HTTP_PROXY=${VA_ASHBURN1_PROXY}
-      - HTTPS_PROXY=${VA_ASHBURN1_PROXY}
+  # crawler_ashburn:
+  #   <<: *crawler-common
+  #   environment:
+  #     - HTTP_PROXY=${VA_ASHBURN1_PROXY}
+  #     - HTTPS_PROXY=${VA_ASHBURN1_PROXY}
 
   # crawler_reston:
   #   <<: *crawler-common
@@ -178,6 +178,19 @@ services:
       - rabbitmq
       - postgres
     command: [ "python", "-m", "components.db_service.main" ]
+
+  db_reader:
+    container_name: db_reader
+    build:
+      context: .
+      dockerfile: components/db_reader/Dockerfile
+    env_file: .env
+    ports:
+      - "8001:8001"
+    depends_on:
+      # - rabbitmq
+      - postgres
+    command: [ "python", "-m", "components.db_reader.main" ]
   scheduler:
     container_name: scheduler
     build:
