--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -87,72 +87,71 @@ services:
 
   crawler_noproxy:
     <<: *crawler-common
+    # California Proxies
+  crawler_la:
+    <<: *crawler-common
+    environment:
+      - HTTP_PROXY=${CA_LA1_PROXY}
+      - HTTPS_PROXY=${CA_LA1_PROXY}
 
-  # California Proxies
-  # crawler_la:
-  #   <<: *crawler-common
-  #   environment:
-  #     - HTTP_PROXY=${CA_LA1_PROXY}
-  #     - HTTPS_PROXY=${CA_LA1_PROXY}
-
-  # crawler_san_jose:
-  #   <<: *crawler-common
-  #   environment:
-  #     - HTTP_PROXY=${CA_SAN_JOSE_PROXY}
-  #     - HTTPS_PROXY=${CA_SAN_JOSE_PROXY}
+  crawler_san_jose:
+    <<: *crawler-common
+    environment:
+      - HTTP_PROXY=${CA_SAN_JOSE_PROXY}
+      - HTTPS_PROXY=${CA_SAN_JOSE_PROXY}
 
   # Florida Proxies
-  # crawler_boca_raton:
-  #   <<: *crawler-common
-  #   environment:
-  #     - HTTP_PROXY=${FL_BOCA_RATON_PROXY}
-  #     - HTTPS_PROXY=${FL_BOCA_RATON_PROXY}
+  crawler_boca_raton:
+    <<: *crawler-common
+    environment:
+      - HTTP_PROXY=${FL_BOCA_RATON_PROXY}
+      - HTTPS_PROXY=${FL_BOCA_RATON_PROXY}
 
   # Nevada
-  # crawler_las_vegas:
-  #   <<: *crawler-common
-  #   environment:
-  #     - HTTP_PROXY=${NV_LAS_VEGAS1_PROXY}
-  #     - HTTPS_PROXY=${NV_LAS_VEGAS1_PROXY}
+  crawler_las_vegas:
+    <<: *crawler-common
+    environment:
+      - HTTP_PROXY=${NV_LAS_VEGAS1_PROXY}
+      - HTTPS_PROXY=${NV_LAS_VEGAS1_PROXY}
 
   # New York Proxies
-  # crawler_buffalo:
-  #   <<: *crawler-common
-  #   environment:
-  #     - HTTP_PROXY=${NY_BUFFALO1_PROXY}
-  #     - HTTPS_PROXY=${NY_BUFFALO1_PROXY}
+  crawler_buffalo:
+    <<: *crawler-common
+    environment:
+      - HTTP_PROXY=${NY_BUFFALO1_PROXY}
+      - HTTPS_PROXY=${NY_BUFFALO1_PROXY}
 
-  # crawler_nyc:
-  #   <<: *crawler-common
-  #   environment:
-  #     - HTTP_PROXY=${NY_NEW_YORK1_PROXY}
+  crawler_nyc:
+    <<: *crawler-common
+    environment:
+      - HTTP_PROXY=${NY_NEW_YORK1_PROXY}
   #     - HTTPS_PROXY=${NY_NEW_YORK1_PROXY}
 
   # Texas Proxies
-  # crawler_dallas:
-  #   <<: *crawler-common
-  #   environment:
-  #     - HTTP_PROXY=${TX_DALLAS1_PROXY}
-  #     - HTTPS_PROXY=${TX_DALLAS1_PROXY}
+  crawler_dallas:
+    <<: *crawler-common
+    environment:
+      - HTTP_PROXY=${TX_DALLAS1_PROXY}
+      - HTTPS_PROXY=${TX_DALLAS1_PROXY}
 
-  # crawler_victoria:
-  #   <<: *crawler-common
-  #   environment:
-  #     - HTTP_PROXY=${TX_VICTORIA1_PROXY}
-  #     - HTTPS_PROXY=${TX_VICTORIA1_PROXY}
+  crawler_victoria:
+    <<: *crawler-common
+    environment:
+      - HTTP_PROXY=${TX_VICTORIA1_PROXY}
+      - HTTPS_PROXY=${TX_VICTORIA1_PROXY}
 
   # Virginia Proxies
-  # crawler_ashburn:
-  #   <<: *crawler-common
-  #   environment:
-  #     - HTTP_PROXY=${VA_ASHBURN1_PROXY}
-  #     - HTTPS_PROXY=${VA_ASHBURN1_PROXY}
+  crawler_ashburn:
+    <<: *crawler-common
+    environment:
+      - HTTP_PROXY=${VA_ASHBURN1_PROXY}
+      - HTTPS_PROXY=${VA_ASHBURN1_PROXY}
 
-  # crawler_reston:
-  #   <<: *crawler-common
-  #   environment:
-  #     - HTTP_PROXY=${VA_RESTON1_PROXY}
-  #     - HTTPS_PROXY=${VA_RESTON1_PROXY}
+  crawler_reston:
+    <<: *crawler-common
+    environment:
+      - HTTP_PROXY=${VA_RESTON1_PROXY}
+      - HTTPS_PROXY=${VA_RESTON1_PROXY}
 
   # =========== 
 
