Testing with a dispatcher subcomponent for scheduled links

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -199,7 +199,7 @@ services:
       - rabbitmq
       - postgres
     environment:
-      - DB_READER_HOST="${DB_READER_HOST}"
+      - DB_READER_HOST=${DB_READER_HOST}
       - HTTPS_PROXY=${VA_RESTON1_PROXY}
     command: [ "python", "-m", "components.scheduler.main" ]
 
