--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -79,7 +79,7 @@ services:
     image: redis:alpine
     container_name: redis
     restart: unless-stopped
-    command: redis-server --maxmemory 2147483648 --maxmemory-policy allkeys-lru #4GiB of ram
+    command: redis-server --maxmemory 2147483648 --maxmemory-policy allkeys-lru
     ports:
       - "6379:6379"
 
